--- a/task3/index.html
+++ b/task3/index.html
@@ -15,18 +15,23 @@
      </p>
    </div>
    <h2>Студийные альбомы</h2>
-   <ul>
-     <li>Wednesday Morning, 3 A.M. (1964)</li>
-     <li>Sounds of Silence (1966)</li>
-     <li>Parsley, Sage, Rosemary and Thyme (1966)</li>
-     <li>The Graduate Original Soundtrack (1967)</li>
-     <li>Bookends (1968)</li>
-     <li>Bridge Over Troubled Water (1970)</li>
-   </ul>
-   <p>Несмотря на отдельные яркие песни, альбомы Саймона и Гарфанкела были по большей части неровными и оставляли ощущение недоговорённости. Наиболее радикальные критики были склонны обвинять дуэт в слащавости и стерильности.
-   </p>
+   <div class="brd3">
+     <ul>
+       <li>Wednesday Morning, 3 A.M. (1964)</li>
+       <li>Sounds of Silence (1966)</li>
+       <li>Parsley, Sage, Rosemary and Thyme (1966)</li>
+       <li>The Graduate Original Soundtrack (1967)</li>
+       <li>Bookends (1968)</li>
+       <li>Bridge Over Troubled Water (1970)</li>
+     </ul>
+   </div>
+   <br>
+   <div class="brd4">
+     <p>Несмотря на отдельные яркие песни, альбомы Саймона и Гарфанкела были по большей части неровными и оставляли ощущение недоговорённости. Наиболее радикальные критики были склонны обвинять дуэт в слащавости и стерильности.
+     </p>
+   </div>
  </body>
 </html>
 
 
-  <div>, <span>, <ul>, <li>. 
+   <span>, 
