commit repeat without mistakes

--- a/task3/index.html
+++ b/task3/index.html
@@ -27,7 +27,7 @@
    </div>
    <br>
    <div class="brd4">
-     <p>Несмотря на отдельные яркие песни, альбомы Саймона и Гарфанкела были по большей части неровными и оставляли ощущение недоговорённости. Наиболее радикальные критики были склонны обвинять дуэт в слащавости и стерильности.
+     <p class="remarka">Несмотря на отдельные яркие песни, альбомы Саймона и Гарфанкела были по большей части неровными и оставляли ощущение недоговорённости. Наиболее радикальные критики были склонны обвинять дуэт в слащавости и стерильности.
      </p>
    </div>
  </body>
